# OpenGL-Template

./: .clang-format  CMakeLists.txt  README.md  format.sh
src/: CMakeLists.txt  main.cpp
